--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -199,7 +199,7 @@ html {
   box-sizing: inherit;
 }
 body {
-  color: hsla(0, 0%, 0%, 0.8);
+  background: black;
   font-family: georgia, serif;
   font-weight: normal;
   word-wrap: break-word;
